--- a/src/api/docker-compose.yml
+++ b/src/api/docker-compose.yml
@@ -10,3 +10,10 @@ services:
     # define ports to expose
     ports:
       - 5000:5000
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: "nvidia"
+              count: 1
+              capabilities: [gpu]
