--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM python:3.10
+FROM python:3.8-slim-buster
 # make root directory in our image
 RUN mkdir /app
 # define working directory
@@ -8,7 +8,7 @@ WORKDIR /app
 # copy local build into root image
 COPY . /app
 # install dependencies
-RUN pip install --upgrade pip
+RUN apt-get update && apt-get install -y git
 RUN pip install -e .
 # expose port 5000
 EXPOSE 5000
