--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -9,6 +9,7 @@ comm==0.1.4
 contourpy==1.1.0
 cycler==0.11.0
 decorator==5.1.1
+python-dotenv==1.0.0
 executing==1.2.0
 filelock==3.12.2
 fire==0.5.0
@@ -18,7 +19,7 @@ humanize==4.8.0
 idna==3.4
 imageio==2.31.1
 importlib-resources==6.0.1
-ipython==8.14.0
+ipython==8.13.0
 ipywidgets==8.1.0
 jedi==0.19.0
 Jinja2==3.1.2
@@ -50,7 +51,6 @@ regex==2023.8.8
 requests==2.31.0
 scikit-image==0.21.0
 scipy==1.11.2
--e git+https://github.com/conveyxr/galactus.git@aa7d4a764c651c5678c2b6fa628d43aa59f5587e#egg=shap_e&subdirectory=src/api
 six==1.16.0
 stack-data==0.6.2
 sympy==1.12
