--- a/src/api/docker-compose.yml
+++ b/src/api/docker-compose.yml
@@ -9,7 +9,10 @@ services:
     build: .
     # define ports to expose
     ports:
-      - 5000:5000
+        - "${API_PORT}:${API_PORT}"
+    networks:
+      customnetwork:
+        ipv4_address: ${FLASK_IP}
     deploy:
       resources:
         reservations:
@@ -17,3 +20,15 @@ services:
             - driver: "nvidia"
               count: 1
               capabilities: [gpu]
+  webserver:
+    image: nginx
+    container_name: web-server
+    networks:
+      customnetwork:
+        ipv4_address: ${NGINX_IP}
+
+networks:
+  customnetwork:
+    ipam:
+      config:
+        - subnet: ${SUBNET}
